--- a/sites/all/themes/md_hosoren/less/coding/md-megamenu-megamenu-user.less
+++ b/sites/all/themes/md_hosoren/less/coding/md-megamenu-megamenu-user.less
@@ -99,7 +99,8 @@
 .cart-icon ul.whishlist li .whishlist-item{
     margin-bottom: 15px;
 }
-.cart-icon ul.whishlist li .whishlist-item a img{
+.cart-icon ul.whishlist li .whishlist-item a img,
+.cart-item a img {
     height: 70px;
 }
 .wishlist-icon ul.whishlist li > a{
