jersey print updates

--- a/sites/all/themes/md_hosoren/css/style.css
+++ b/sites/all/themes/md_hosoren/css/style.css
@@ -16578,7 +16578,7 @@ input[type="submit"] + input[type="submit"] {
 }
 @media (min-width: 991px) {
   .productcart_inline .commerce-add-to-cart .form-item {
-    width: 33.3333%;
+    width: 150px;
     min-height: 1px;
     padding-right: 30px;
   }
@@ -18694,12 +18694,37 @@ ul li {
 .page-user .profile table td {
   padding: 8px;
 }
-#fckJerseyPrintPreview {
+.commerce-product-field-empty {
+  display: none;
+}
+.product_full h4 {
+  color: #005daf;
+}
+.product_full .e-group {
+  margin-top: 5px;
+}
+.product_full .fck_jersey_print_preview {
   display: inline-block;
-  padding: 10px 15px;
+  padding: 4px 7px 4px 7px;
   font-size: 13px;
   letter-spacing: 1px;
   background: #333333;
   color: #ffffff;
   text-transform: uppercase;
+}
+.product_full .fck_jersey_print_preview:before {
+  content: '';
+  display: inline-block;
+  background: url('../images/jersey_preview.png');
+  width: 25px;
+  height: 25px;
+  margin-right: 7px;
+  vertical-align: middle;
+}
+.product_full .e-attribute-price-preview {
+  vertical-align: top;
+  line-height: 5px;
+}
+.product_full .e-text-number-field input {
+  width: 80px !important;
 }
