--- a/sites/all/themes/md_hosoren/less/coding/md_hosoren.less
+++ b/sites/all/themes/md_hosoren/less/coding/md_hosoren.less
@@ -590,50 +590,50 @@ input[type="submit"] + input[type="submit"]{
 
 /*Default Page - User Login, Register, New Password  */
 
-.page-user .breadcrumb{
+.page-user .breadcrumb {
     margin: 20px 0 20px;
 }
-.page-user #content{
+.page-user #content {
     margin-bottom: 60px;
 }
 
 
 /* Shop Full */
-.productcart_inline .commerce-product-extra-field-sku{
+.productcart_inline .commerce-product-extra-field-sku {
     display: inline-block;
 }
-.commerce-product-field-commerce-price, .commerce-product-field-field-price-old{
+.commerce-product-field-commerce-price, .commerce-product-field-field-price-old {
     display: inline-block;
     font-size: 40px;
     margin-right: 10px;
     line-height: 1;
 }
-.product-description{
+.product-description {
     margin-top: 10px;
 }
 
-.commerce-add-to-cart .form-select{
+.commerce-add-to-cart .form-select {
     text-transform: capitalize;
 }
 @media (min-width: 991px) {
-    .productcart_inline .commerce-add-to-cart .form-item{
-        width: 33.3333%;
+    .productcart_inline .commerce-add-to-cart .form-item {
+        width: 150px;
         min-height: 1px;
         //margin: 0;
         padding-right: 30px;
         //float: left;
     }
-    .productcart_inline .commerce-add-to-cart{
+    .productcart_inline .commerce-add-to-cart {
         overflow: hidden;
     }
-    .productcart_inline .commerce-add-to-cart .form-submit{
+    .productcart_inline .commerce-add-to-cart .form-submit {
         clear: both;
         float: left;
         margin: 25px 0;
     }
 }
 
-.commerce-add-to-cart .form-submit{
+.commerce-add-to-cart .form-submit {
     font-size: 12px;
     letter-spacing: 1px;
     padding: 12px 25px;    
