--- a/sites/all/themes/md_hosoren/less/coding/libs/main.less
+++ b/sites/all/themes/md_hosoren/less/coding/libs/main.less
@@ -4544,7 +4544,7 @@ h2.entry-title {
 }
 
 .product-thumbnail img {
-  width: 100% !important;
+  //width: 100% !important;
 }
 
 .product-soldout {
