categories - grid type

--- a/sites/all/themes/md_hosoren/less/coding/product.less
+++ b/sites/all/themes/md_hosoren/less/coding/product.less
@@ -1,4 +1,4 @@
-.view-product-slider {
+.view-product-slider, .view-fck-search-pages {
 
 	.views-row-even, .views-row-odd {
 		.product-thumbnail a {
