--- a/sites/all/themes/md_hosoren/css/style.css
+++ b/sites/all/themes/md_hosoren/css/style.css
@@ -18729,17 +18729,23 @@ ul li {
   width: 250px;
 }
 .view-product-slider .views-row-even .product-thumbnail a,
-.view-product-slider .views-row-odd .product-thumbnail a {
+.view-fck-search-pages .views-row-even .product-thumbnail a,
+.view-product-slider .views-row-odd .product-thumbnail a,
+.view-fck-search-pages .views-row-odd .product-thumbnail a {
   height: 310px;
 }
 .view-product-slider .views-row-even .product-thumbnail a img,
-.view-product-slider .views-row-odd .product-thumbnail a img {
+.view-fck-search-pages .views-row-even .product-thumbnail a img,
+.view-product-slider .views-row-odd .product-thumbnail a img,
+.view-fck-search-pages .views-row-odd .product-thumbnail a img {
   height: 100%;
   padding: 14px 0;
 }
-.view-product-slider .views-row-odd .product-thumbnail a {
+.view-product-slider .views-row-odd .product-thumbnail a,
+.view-fck-search-pages .views-row-odd .product-thumbnail a {
   background: rgba(0, 0, 0, 0.4);
 }
-.view-product-slider .views-row-even .product-thumbnail a {
+.view-product-slider .views-row-even .product-thumbnail a,
+.view-fck-search-pages .views-row-even .product-thumbnail a {
   background: rgba(0, 80, 158, 0.4);
 }
