reordering products - admin & search pages

--- a/sites/all/themes/md_hosoren/less/coding/libs/main.less
+++ b/sites/all/themes/md_hosoren/less/coding/libs/main.less
@@ -4503,6 +4503,10 @@ h2.entry-title {
   color: #333;
   font-size: 25px;
   font-weight: 700;
+
+  &>div {
+    display: inline-block;
+  }
 }
 
 .product-price del {
