--- a/sites/all/themes/md_hosoren/css/style.css
+++ b/sites/all/themes/md_hosoren/css/style.css
@@ -12039,6 +12039,9 @@ h2.entry-title {
   font-size: 25px;
   font-weight: 700;
 }
+.product-price > div {
+  display: inline-block;
+}
 .product-price del {
   color: #898989;
   font-size: 16px;
