--- a/sites/all/themes/md_hosoren/less/coding/libs/bootstrap.less
+++ b/sites/all/themes/md_hosoren/less/coding/libs/bootstrap.less
@@ -6371,7 +6371,7 @@ button.close {
 
 .modal-dialog {
   position: relative;
-  width: auto;
+  //width: auto;
   margin: 10px;
 }
 
@@ -6457,8 +6457,8 @@ button.close {
 
 @media (min-width: 768px) {
   .modal-dialog {
-    width: 600px;
-    margin: 30px auto;
+    //width: 800px;
+    margin: 60px auto;    
   }
 
   .modal-content {
