--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -50,6 +50,7 @@
 
 //----------------------------
 @import 'coding/base.less';
+@import 'coding/ctools.less';
 @import 'coding/buttons.less';
 @import 'coding/categories_list.less';
 @import 'coding/checkout.less';
