--- a/sites/all/themes/md_hosoren/less/coding/ctools.less
+++ b/sites/all/themes/md_hosoren/less/coding/ctools.less
@@ -1,5 +1,5 @@
 .modal-dialog {
-	z-index: 1630;
+	//z-index: 1630;
 }
 
 .ctools-modal-dialog .modal-body {
@@ -8,7 +8,7 @@
 }
  
 .modal-backdrop {
-	z-index: 1610;
+	//z-index: 1610;
 }
 
 .modal-body {
