--- a/sites/all/themes/md_hosoren/less/coding/libs/main.less
+++ b/sites/all/themes/md_hosoren/less/coding/libs/main.less
@@ -8772,4 +8772,8 @@ h2.entry-title {
   top: 0 !important;
 }
 
+.subscible-wrapper {
+  margin-bottom: 45px !important;
+}
+
 /*# sourceMappingURL=maps/main.css.map */
