--- a/sites/all/themes/md_hosoren/less/print.less
+++ b/sites/all/themes/md_hosoren/less/print.less
@@ -4,10 +4,14 @@
 	display: none !important;
 }
 
-.shop_table {
+.view-wishlist-product {
 	th:last-child, td:last-child {
 		display: none !important;
 	}
+}
+
+#edit-submit {
+  display: none;
 }
 
 @media print {
