--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -62,3 +62,5 @@
 @import 'coding/jersey_print.less';
 @import 'coding/product.less';
 @import 'coding/frontpage.less';
+@import 'coding/wishlist.less';
+@import 'coding/share_buttons.less';
