--- a/sites/all/themes/md_hosoren/less/coding/categories_list.less
+++ b/sites/all/themes/md_hosoren/less/coding/categories_list.less
@@ -1,3 +1,32 @@
+.category-jumbotron {
+
+	.category-item {
+		position: relative;
+
+		.fck-category-title, .fck-category-description {
+			
+			text-align: center;
+		}
+		
+		.fck-category-title {			
+			color: #ffffff;
+			text-transform: uppercase;
+			font-size: 66px;
+		    line-height: 270px;
+		}
+
+		.fck-category-description {
+
+		}
+	}
+
+	.category-banner {
+		max-width: 100%;
+	    height: 282px;
+		background-size: cover;
+	} 
+}
+
 .l-categories-list {
     padding-bottom: 45px;
     
