--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -1,4 +1,15 @@
-/*@only-mobile:  	~"(min-width: 0px) and (max-width: @{screen-xs})";
+@screen-xs: 640px;
+@screen-xs-min: @screen-xs;
+@screen-sm: 640px;
+@screen-sm-min: @screen-sm;
+@screen-md: 768px;
+@screen-md-min: @screen-md;
+@screen-lg: 960px;
+@screen-lg-min: @screen-lg;
+@screen-sm-max: (@screen-md-min - 1);
+@screen-md-max: (@screen-lg-min - 1);
+
+@only-mobile:  	~"(min-width: 0px) and (max-width: @{screen-xs})";
 @only-small:  	~"(min-width: @screen-sm) and (max-width: @screen-md)";
 @only-medium:  	~"(min-width: @screen-md) and (max-width: @screen-lg)";
 @only-large:  	~"(min-width: @screen-lg) and (max-width: @screen-lg-max)";
@@ -6,7 +17,9 @@
 @small-plus:  	~"(min-width: @{screen-sm})";
 @medium-plus:  	~"(min-width: @{screen-md})";
 @large-plus:  	~"(min-width: @{screen-lg})";
-*/
+
+@small-minus:  	~"(max-width: @{screen-md})";
+@medium-minus:  ~"(max-width: @{screen-lg})";
 
 @white_color: #ffffff;
 @medium_grey_color: #707b81;
@@ -64,3 +77,4 @@
 @import 'coding/frontpage.less';
 @import 'coding/wishlist.less';
 @import 'coding/share_buttons.less';
+@import 'coding/blog.less';
