products as blocks, jersey print wishlist remove issue, cart popup jp info, print button with message

--- a/sites/all/themes/md_hosoren/css/print.css
+++ b/sites/all/themes/md_hosoren/css/print.css
@@ -12,8 +12,10 @@
 .view-wishlist-product td:last-child {
   display: none !important;
 }
-#edit-submit {
-  display: none;
+#edit-submit,
+.alert,
+.messages {
+  display: none !important;
 }
 @media print {
   .noprint {
