--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -66,6 +66,7 @@
 @import 'coding/ctools.less';
 @import 'coding/buttons.less';
 @import 'coding/categories_list.less';
+@import 'coding/cart.less';
 @import 'coding/checkout.less';
 @import 'coding/search.less';
 @import 'coding/main-menu.less';
