--- a/sites/all/themes/md_hosoren/css/style.css
+++ b/sites/all/themes/md_hosoren/css/style.css
@@ -18903,7 +18903,7 @@ ul li {
   content: 'Send som e-mail';
 }
 .view-wishlist-product .st_facebook_custom:after {
-  content: 'Del pa facebook';
+  content: 'Del på Facebook';
 }
 #emailshareMsg {
   background: #ff0 !important;
