--- a/sites/all/themes/md_hosoren/less/coding/wishlist.less
+++ b/sites/all/themes/md_hosoren/less/coding/wishlist.less
@@ -4,3 +4,12 @@
 	color: @blue_color;
 	text-transform: uppercase;
 }
+
+.view-wishlist-product {
+
+	table {
+		tr.even, tr.odd {
+			background-color: transparent;
+		}
+	}
+}
