--- a/sites/all/themes/md_hosoren/less/coding/checkout.less
+++ b/sites/all/themes/md_hosoren/less/coding/checkout.less
@@ -38,6 +38,13 @@
 	}
 }
 
+#commerce-checkout-form-checkout {
+	#commerce-checkout-coupon-ajax-wrapper { //,#commerce-shipping-service-ajax-wrapper
+		display: none;
+	}
+}
+
+
 .commerce-order-handler-area-order-total .commerce-price-formatted-components {
 	tr.odd, tr.even {
 		background: #333;
